--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
-  "presets": ["es2015"],
+  "presets": ["es2015", "stage-2"],
   "plugins": ["transform-async-to-generator"],
   "env": {
     "production": {
-      "presets": ["es2015", { modules: false }]
+      "presets": [
+        ["es2015", { modules: false }],
+        "stage-2"
+      ]
     }
   }
 }
