--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
+    "html-pdf": "^2.1.0",
     "joi": "^10.1.0",
     "mongoose": "^4.7.5",
     "morgan": "^1.7.0",
+    "phantomjs-prebuilt": "2.1.13",
+    "pug": "^2.0.0-beta6",
     "util": "^0.10.3"
   },
   "scripts": {
     "start": "NODE_ENV=development NODE_PATH=src nodemon --exec \"babel-node index.js\"",
-    "test": "jest"
+    "test": "jest --verbose",
+    "test:unit": "jest --verbose -t .*\\.spec\\.js$"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -23,6 +27,7 @@
     "babel-jest": "^18.0.0",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "faker": "^3.1.0",
     "jest": "^18.1.0",
     "nodemon": "^1.11.0",
@@ -30,7 +35,6 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "verbose": true,
     "setupFiles": [
       "./tests/setup.js"
     ]
