--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "start": "NODE_ENV=development NODE_PATH=src nodemon --exec \"babel-node index.js\"",
     "test": "jest --verbose",
-    "test:unit": "jest --verbose -t .*\\.spec\\.js$"
+    "test:all": "npm run test:unit && npm run test:integration",
+    "test:unit": "jest --verbose .*\\.spec\\.js$",
+    "test:integration": "jest --verbose .*\\.test\\.js$"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
