--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "scripts": {
     "start": "NODE_ENV=development NODE_PATH=src nodemon --exec \"babel-node index.js\"",
-    "test": "jest --verbose",
+    "test": "NODE_PATH=src jest --verbose",
     "test:all": "npm run test:unit && npm run test:integration",
-    "test:unit": "jest --verbose .*\\.spec\\.js$",
-    "test:integration": "jest --verbose .*\\.test\\.js$"
+    "test:unit": "NODE_PATH=src jest --verbose .*\\.spec\\.js$",
+    "test:integration": "NODE_PATH=src jest --verbose .*\\.test\\.js$"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
