--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^7.1.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "eslint": "^3.13.0",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "html-pdf": "^2.1.0",
@@ -17,7 +19,8 @@
     "util": "^0.10.3"
   },
   "scripts": {
-    "start": "NODE_ENV=development NODE_PATH=src nodemon --exec \"babel-node index.js\"",
+    "lint": "eslint src/ tests/",
+    "start": "NODE_ENV=development NODE_PATH=src nodemon --exec \"npm run lint && babel-node index.js\"",
     "test": "NODE_PATH=src jest --verbose",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:unit": "NODE_PATH=src jest --verbose .*\\.spec\\.js$",
@@ -30,6 +33,10 @@
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "eslint-config-airbnb": "latest",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "faker": "^3.1.0",
     "jest": "^18.1.0",
     "nodemon": "^1.11.0",
